--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@tailwindcss/ui": "^0.5.0",
+    "alpinejs": "^2.6.0",
     "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
