--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,12 @@
 # Where 3rd-party dependencies like ExDoc output generated docs.
 /doc/
 
-/priv/plts/
+# Dialyzer
+/priv/plts/*.plt
+/priv/plts/*.plt.hash
+
+# Sobelow
+.sobelow
 
 # Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
