--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,32 +23,50 @@ jobs:
       MIX_ENV: test
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-elixir@v1.0.0
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Setup elixir
+        uses: actions/setup-elixir@v1.0.0
         with:
           otp-version: 23.0.2
           elixir-version: 1.10.4
-      - uses: actions/cache@v1
+      
+      - name: Get deps cache
+        uses: actions/cache@v1
         with:
           path: deps
           key: ${{ runner.os }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
-          restore-keys: |
-            ${{ runner.os }}-mix-
-      - uses: actions/setup-node@v1
+          restore-keys: ${{ runner.os }}-mix-
+      
+      - name: Get build cache
+        uses: actions/cache@v1
+        with:
+          path: _build/test/
+          key: ${{ runner.os }}-build-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+          restore-keys: ${{ runner.os }}-build-      
+      
+      - name: Install node
+        uses: actions/setup-node@v1
         with:
           node-version: "10.x"
-      - uses: nanasess/setup-chromedriver@master
+      
+      - name: Install chrome driver
+        uses: nanasess/setup-chromedriver@master
       - run: |
           export DISPLAY=:99
           chromedriver --url-base=/wd/hub &
           sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
 
-      - run: mix local.rebar --force
-      - run: mix local.hex --force
-      - run: mix deps.get
-      - run: npm install --prefix assets
-      - run: npm run deploy --prefix assets
-      - run: mix ecto.migrate
+      - name: Install Dependencies
+        run: |
+          mix local.rebar --force
+          mix local.hex --force
+          mix deps.get
+          mix compile
+          npm install --prefix assets
+          npm run deploy --prefix assets
+          mix ecto.migrate
 
       - name: Check formatting
         run: mix format --check-formatted
@@ -65,13 +83,18 @@ jobs:
         with:
           path: priv/plts
           key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-plts-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+      
       - name: Create PLTs
         if: steps.plt-cache.outputs.cache-hit != 'true'
         run: |
           mkdir -p priv/plts
           mix dialyzer --plt
+      
       - name: Run dialyzer
         run: mix dialyzer --no-check --halt-exit-status
 
       - name: Run Tests
         run: mix test --trace
+
+      - name: Run Code Coverage
+        run: mix coveralls.github
