--- a/assets/package.json
+++ b/assets/package.json
@@ -7,12 +7,16 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@tailwindcss/ui": "^0.5.0",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.3.1",
     "alpinejs": "^2.6.0",
+    "autoprefixer": "^10.0.4",
     "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "postcss": "^8.1.14",
     "typeface-inter": "^3.15.0"
   },
   "devDependencies": {
@@ -26,7 +30,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "tailwindcss": "^1.7.6",
+    "tailwindcss": "^2.0.1",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.2"
